--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "express": "^4.15.2",
     "mongoose": "^4.9.2",
     "morgan": "^1.8.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "faker": "^4.1.0",
+    "mocha": "^3.2.0"
   }
 }
